# easydapp-storage-canister

./: .gitignore  Cargo.toml  README.md  dfx.json  rust-toolchain.toml  storage.did  storage.wasm  test.sh
src/: apis.rs  lib.rs  stable.rs  test.rs  types.rs
